# Job-Posting-Authentication-Detection-V2

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  run_pipeline.py
artifacts/: preprocessor.pkl
src/: utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/notebooks/: eda.ipynb  preprocessing.ipynb
src/pipeline/: predict_pipeline.py
